***********
version 1.7
***********

* added support for JSON-RPC 2.0
* deprecated JSON-RPC 1.1 functionality (1.1 was never released)


***********
version 1.6
***********

* parse_json() now ignores UTF-8 and Unicode BOMs at the start of passed JSON string
* fixed a bug in request logging in the JsonRpcHandler module (issue 1487)


***********
version 1.5
***********

* binary values are serialized as base64-encoded strings
* user modules moved to top-level qore module directory from version-specific
  module directory since they are valid for multiple versions of qore
* serialize nan, +/-inf as null according to the JSON spec
* added detection for invalid JSON-RPC calls and added a more user-friendly
  error message in the JsonRpcHandler module
* tests ported to QUnit
* Qore 0.8.12 required as a minimum to build
* JSON output is more compact; fewer extransous whitespaces are used
* new function names are now provided and the old camel-case functions names
  have been deprecated:
  * makeFormattedJSONString() deprecated for make_json()
  * makeJSONString() deprecated for make_json()
  * parseJSON() deprecated for parse_json()
  * makeFormattedJSONRPC11ErrorString() deprecated for make_jsonrpc11_error()
  * makeFormattedJSONRPCErrorString() deprecated for mmake_jsonrpc_error()
  * makeFormattedJSONRPCRequestString() deprecated for mmake_jsonrpc_request()
  * makeFormattedJSONRPCResponseString() deprecated for mmake_jsonrpc_response()
  * makeJSONRPC11ErrorString() deprecated for mmake_jsonrpc11_error()
  * makeJSONRPCErrorString() deprecated for mmake_jsonrpc_error()
  * makeJSONRPCRequestString() deprecated for mmake_jsonrpc_request()
  * makeJSONRPCResponseString() deprecated for mmake_jsonrpc_response()


***********
version 1.4
***********

* date/time values are always serialized with microseconds and in the local time zone for consistency's sake
* fixed a crashing bug in the JSON control-character encoding algorithm