@@ -26,7 +26,8 @@
     @code %requires json @endcode
 
     Also included with the binary json module:
-    - <a href="../../JsonRpcHandler/html/index.html">JsonRpcHandler user module</a>
+    - <a href="../../JsonRpcConnection/html/index.html">JsonRpcConnection</a> user module
+    - <a href="../../JsonRpcHandler/html/index.html">JsonRpcHandler</a> user module
 
     @note JSON functionality was included in the main %Qore shared library until version 0.8.1, at which time the code was removed to make this module.
 
@@ -133,6 +134,7 @@
     @subsection v0_1_7 Version 1.7
     - deprecated support for the non-published JSON-RPC 1.1 protocol
     - added support for JSON-RPC 2.0
+    - added the <a href="../../JsonRpcConnection/html/index.html">JsonRpcConnection</a> user module
 
     @subsection v0_1_6 Version 1.6
     - @ref parse_json() now ignores UTF-8 and Unicode BOMs at the start of passed JSON string  (<a href="https://github.com/qorelanguage/qore/issues/1398">issue 1398</a>)
