@@ -112,7 +112,9 @@ AbstractQoreNode* JsonRpcClient::call(QoreStringNode *msg, QoreHashNode *info, E
     |\c User-Agent|\c Qore-JSON-RPC-Client/1.7
     |\c Connection|\c Keep-Alive
 
-    @note This class is not available with the \c PO_NO_NETWORK parse option.
+    @note
+    - if no \c default_path is given in the constructor(), then \c "JSON" is used
+    - This class is not available with the \c PO_NO_NETWORK parse option.
 */
 qclass JsonRpcClient [arg=JsonRpcClient* client; ns=Qore::Json; vparent=HTTPClient];
 
@@ -134,14 +136,14 @@ JsonRpcClient::constructor() {
 /** By default the object will immediately attempt to establish a connection to the server
     @param opts HTTPClient constructor options:
     - \c connect_timeout: The timeout value in milliseconds for establishing a new socket connection (also can be a relative date-time value for clarity, ex: \c 30s)
-    - \c default_path: The default path to use for new connections if a path is not otherwise specified in the connection URL.
-    - \c default_port: The default port number to connect to if none is given in the URL.
-    - \c http_version: Either \c '1.0' or \c '1.1' for the claimed HTTP protocol version compliancy in outgoing message headers.
-    - \c protocols: A hash describing new protocols, the key is the protocol name and the value is either an integer giving the default port number or a hash with \c 'port' and \c 'ssl' keys giving the default port number and a boolean value to indicate that an SSL connection should be established.
-    - \c max_redirects: The maximum number of redirects before throwing an exception (the default is 5).
-    - \c proxy: The proxy URL for connecting through a proxy.
+    - \c default_path: The default path to use for new connections if a path is not otherwise specified in the connection URL; if this option is not given and no path appears in the URL, then \c "JSON" is used instead
+    - \c default_port: The default port number to connect to if none is given in the URL
+    - \c http_version: Either \c '1.0' or \c '1.1' for the claimed HTTP protocol version compliancy in outgoing message headers
+    - \c protocols: A hash describing new protocols, the key is the protocol name and the value is either an integer giving the default port number or a hash with \c 'port' and \c 'ssl' keys giving the default port number and a boolean value to indicate that an SSL connection should be established
+    - \c max_redirects: The maximum number of redirects before throwing an exception (the default is 5)
+    - \c proxy: The proxy URL for connecting through a proxy
     - \c timeout: The timeout value in milliseconds (also can be a relative date-time value for clarity, ex: \c 5m)
-    - \c url: A string giving the URL to connect to.
+    - \c url: A string giving the URL to connect to; if this option is not given and no path appears in the URL, then \c "JSON" is used instead
     - \c version: A string giving the JSON-RPC protocol version; default: \c "2.0"
     @param no_connect pass a boolean True value argument to suppress the automatic connection and establish a connection on demand with the first request
 
